[gd_scene load_steps=2 format=3 uid="uid://m1audjt0ns08"]

[ext_resource type="Script" path="res://UI/UserPanel.gd" id="1_pg1qn"]

[node name="UserPanel" type="VBoxContainer"]
offset_right = 507.0
offset_bottom = 130.0
size_flags_horizontal = 3
size_flags_vertical = 3
script = ExtResource("1_pg1qn")

[node name="LoginGroup" type="HFlowContainer" parent="."]
unique_name_in_owner = true
layout_mode = 2

[node name="Username" type="LineEdit" parent="LoginGroup"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
focus_next = NodePath("../Password")
placeholder_text = "Username"

[node name="Password" type="LineEdit" parent="LoginGroup"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
focus_next = NodePath("../LoginButton")
placeholder_text = "Password"
virtual_keyboard_type = 6
secret = true

[node name="LoginButton" type="Button" parent="LoginGroup"]
layout_mode = 2
text = "Login"

[node name="LoggedInGroup" type="HFlowContainer" parent="."]
unique_name_in_owner = true
visible = false
layout_mode = 2

[node name="Label" type="Label" parent="LoggedInGroup"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 0.3
text = "Logged in as: "
vertical_alignment = 1

[node name="LoggedInUsername" type="Label" parent="LoggedInGroup"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
text = "Username"
vertical_alignment = 1

[node name="LogoutButton" type="Button" parent="LoggedInGroup"]
layout_mode = 2
text = "LOG OUT"

[node name="Message" type="Label" parent="."]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 8
vertical_alignment = 2

[connection signal="focus_entered" from="LoginGroup/Username" to="." method="_on_username_focus_entered"]
[connection signal="focus_exited" from="LoginGroup/Username" to="." method="_on_focus_exited"]
[connection signal="text_submitted" from="LoginGroup/Username" to="." method="_on_username_text_submitted"]
[connection signal="focus_entered" from="LoginGroup/Password" to="." method="_on_password_focus_entered"]
[connection signal="focus_exited" from="LoginGroup/Password" to="." method="_on_focus_exited"]
[connection signal="text_submitted" from="LoginGroup/Password" to="." method="_on_password_text_submitted"]
[connection signal="pressed" from="LoginGroup/LoginButton" to="." method="_on_button_pressed"]
[connection signal="pressed" from="LoggedInGroup/LogoutButton" to="." method="_on_logout_button_pressed"]
